# iwisum-flightgear

./: .envrc  README.md  main.py  pyproject.toml
iwisum_flightgear/: config.py  qlearning.py
ppo/: ppo_continuous_actions.py  ppo_eval.sh  ppo_train.sh
ppo/runs/C172-HeadingControlTask-Shaping.STANDARD-NoFG-v0__ppo_continuous_actions__1__1738280696/: events.out.tfevents.1738280696.Dariuszs-MacBook-Pro-2.local.17809.0  model.cleanrl_model  obs.pickle
ppo/runs/C172-HeadingControlTask-Shaping.STANDARD-NoFG-v0__ppo_continuous_actions__1__1738282636/: model.cleanrl_model  obs.pickle
rpo/: rpo_continuous_actions.py  rpo_eval.sh  rpo_train.sh
rpo/runs/C172-HeadingControlTask-Shaping.STANDARD-NoFG-v0__rpo_continuous_actions__1__1738280404/: events.out.tfevents.1738280404.Dariuszs-MacBook-Pro-2.local.15922.0  model.cleanrl_model  obs.pickle
rpo/runs/C172-HeadingControlTask-Shaping.STANDARD-NoFG-v0__rpo_continuous_actions__1__1738282650/: model.cleanrl_model  obs.pickle
