[tool.poetry]
name = "iwisum_flightgear"
version = "0.1.0"
description = ""
authors = ["dariusz.piwowarski <d.piwowarski.mail@gmail.com>", "Wojciech Przybytek <wprzybytek@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jsbgym = "^0.4.0"
gymnasium="0.29.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
